--- a/spring-demo/src/main/resources/application.properties
+++ b/spring-demo/src/main/resources/application.properties
@@ -1,4 +1,19 @@
+server.port=8081
+
 spring.application.name=spring-demo
+
 spring.output.ansi.enabled=always
 
-server.port=8081
+spring.mvc.favicon.enabled=false
+
+
+spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:h2:file:~/data/employee_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
