--- a/spring-demo/src/main/resources/application.properties
+++ b/spring-demo/src/main/resources/application.properties
@@ -1,19 +1,22 @@
-server.port=8081
+server.port = 8081
 
-spring.application.name=spring-demo
+## --> General Config <--
+spring.application.name = spring-demo
+spring.output.ansi.enabled = always
+spring.mvc.favicon.enabled = false
 
-spring.output.ansi.enabled=always
+## --> H2 Config <--
+#spring.h2.console.enabled = true
+#spring.datasource.url = jdbc:h2:file:~/data/employee_db
+#spring.datasource.driverClassName = org.h2.Driver
+#spring.datasource.username = sa
+#spring.datasource.password = password
 
-spring.mvc.favicon.enabled=false
+## --> MariaDB config <--
+spring.datasource.url = jdbc:mariadb://localhost:3306/employee_db
+spring.datasource.username = root
+spring.datasource.password = ${DB_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-
-spring.h2.console.enabled=true
-
-spring.datasource.url=jdbc:h2:file:~/data/employee_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
 
