--- a/productService/src/main/resources/application.yaml
+++ b/productService/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ spring:
       enabled: always
   application:
     name: PRODUCT-SERVICE
+  config:
+    import: optional:configserver:http://localhost:9296
+    fail-fast: true
   datasource:
     url: jdbc:mariadb://${DB_HOST:localhost}:3306/product_db
     username: root
@@ -20,9 +23,9 @@ spring:
 
 
 ## <-- Eureka config -->
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka/}
